--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angularfire2": "^5.4.2",
     "ng-gapi": "0.0.91",
     "ng-inline-svg": "^10.1.0",
+    "ngx-youtube-player": "^7.1.5",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
